2000-10-01  Roland McGrath  <roland@frob.com>

	* inode.c (write_node): Use memcpy instead of a loop.

2000-07-26  Mark Kettenis  <kettenis@gnu.org>

	* Makefile (HURDLIBS): Reorder libs such that the threads lib
	comes before the ports lib.  This makes sure the functions in
	libthreads properly override the stubs in libports with the new
	dynamic linker semantics in glibc 2.2.

2000-07-26  Marcus Brinkmann  <marcus@gnu.org>

	* truncate.c (trunc_indirect): Add missing argument to
	pager_flush_some.

2000-07-25  Thomas Bushnell, BSG  <tb@mit.edu>

	* truncate.c (trunc_indirect): Before freeing an indirect block,
	remove it from the disk pager's kernel cache.

2000-03-09  Roland McGrath  <roland@baalperazim.frob.com>

	* balloc.c (ext2_free_blocks, ext2_new_block): Fix formats to avoid
	-Wformat warnings.
	* getblk.c (ext2_alloc_block, inode_getblk, ext2_getblk): Likewise.
	* ialloc.c (ext2_count_free_inodes): Likewise.
	* truncate.c (trunc_direct): Likewise.
	* pager.c (pending_blocks_write, diskfs_grow): Likewise.

2000-03-03  Roland McGrath  <roland@baalperazim.frob.com>

	* dir.c (diskfs_get_directs): Don't allocate buffer for *DATA until
	after scanning for ENTRY and possibly returning EOF.

2000-02-05  Roland McGrath  <roland@baalperazim.frob.com>

	* ext2_fs.h: Update from Linux 2.3.42 version (ext2_fs_i.h unchanged).
	* inode.c (check_high_bits): In accordance with Linux 2.3.42 behavior,
	permit 32-bit uids on non-hurd filesystems unless i_dtime is zero
	(which indicates an extra old Linux ext2 implementation I guess).

2000-01-16  Mark Kettenis  <kettenis@gnu.org>

	* pager.c (file_pager_write_page): Lock NODE->dn->alloc_lock
	before accessing NODE->allocsize.  Fixes Debian bug #40302.

1999-10-13  Roland McGrath  <roland@baalperazim.frob.com>

	* ext2fs.c (diskfs_name_max): New variable.

1999-10-06  Roland McGrath  <roland@baalperazim.frob.com>

	* hyper.c (get_hypermetadata): Avoid overflow in calculation of disk