@@ -1,3 +1,8 @@
+2000-11-02  Marcus Brinkmann  <marcus@gnu.org>
+
+	* tunnel.c (trivfs_S_io_get_owner): Add return type to silence
+	compiler warning.
+
 2000-10-06  Marcus Brinkmann  <marcus@gnu.org>
 
 	* Makefile (SRCS): Add tunnel.c
