@@ -1,3 +1,8 @@
+2000-11-30  Marcus Brinkmann  <marcus@gnu.org>
+
+	* dir.c (diskfs_lookup_hard): If name is too long, clear
+	DS before returning ENAMETOOLONG.
+
 2000-07-26  Mark Kettenis  <kettenis@gnu.org>
 
 	* Makefile (HURDLIBS): Reorder libs such that the threads lib
